RISC-V: Client build fails after JDK-8339738

XMLWordPrintable

    • b17
    • riscv
    • linux

      /home/fyang/jdk/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp: In member function 'void MacroAssembler::vector_update_crc32(Register, Register, Register, Register, Register, Register, Register, Register, Register, Register)':
      /home/fyang/jdk/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp:1479:9: error: 'MaxVectorSize' was not declared in this scope; did you mean 'MaxNewSize'?
       1479 | if (MaxVectorSize == 16) {
            | ^~~~~~~~~~~~~
            | MaxNewSize
      /home/fyang/jdk/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp: In member function 'void MacroAssembler::kernel_crc32(Register, Register, Register, Register, Register, Register, Register, Register, Register, Register, Register, Register, Register)':
      /home/fyang/jdk/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp:1580:31: error: 'MaxVectorSize' was not declared in this scope; did you mean 'MaxNewSize'?
       1580 | const int64_t tmp_limit = MaxVectorSize >= 32 ? unroll_words*3 : unroll_words*5;
            | ^~~~~~~~~~~~~
            | MaxNewSize
      gmake[3]: *** [lib/CompileJvm.gmk:170: /home/fyang/jdk/build/linux-riscv64-client-release/hotspot/variant-client/libjvm/objs/macroAssembler_riscv.o] Error 1
      gmake[3]: *** Waiting for unfinished jobs....
      gmake[2]: *** [make/Main.gmk:245: hotspot-client-libs] Error 2
      gmake[2]: *** Waiting for unfinished jobs....

      ERROR: Build failed for target 'images' in configuration 'linux-riscv64-client-release' (exit code 2)

      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-client_libjvm_objs_macroAssembler_riscv.o:
      /home/fyang/jdk/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp: In member function 'void MacroAssembler::vector_update_crc32(Register, Register, Register, Register, Register, Register, Register, Register, Register, Register)':
      /home/fyang/jdk/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp:1479:9: error: 'MaxVectorSize' was not declared in this scope; did you mean 'MaxNewSize'?
       1479 | if (MaxVectorSize == 16) {
            | ^~~~~~~~~~~~~
            | MaxNewSize
      /home/fyang/jdk/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp: In member function 'void MacroAssembler::kernel_crc32(Register, Register, Register, Register, Register, Register, Register, Register, Register, Register, Register, Register, Register)':
      /home/fyang/jdk/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp:1580:31: error: 'MaxVectorSize' was not declared in this scope; did you mean 'MaxNewSize'?
       1580 | const int64_t tmp_limit = MaxVectorSize >= 32 ? unroll_words*3 : unroll_words*5;
            | ^~~~~~~~~~~~~
            | MaxNewSize

      * All command lines available in /home/fyang/jdk/build/linux-riscv64-client-release/make-support/failure-logs.
      === End of repeated output ===

      No indication of failed target found.
      HELP: Try searching the build log for '] Error'.
      HELP: Run 'make doctor' to diagnose build problems.

      make[1]: *** [/home/fyang/jdk/make/Init.gmk:323: main] Error 2
      make: *** [/home/fyang/jdk/make/Init.gmk:189: images] Error 2

            Assignee:
            Hamlin Li
            Reporter:
            Fei Yang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: