8340808: RISC-V: Client build fails after JDK-8339738

Reviewed-by: fyang